Compiler Implementation for Match Statements